Closed Bug 1467452 Opened 8 years ago Closed 8 years ago

Flash Plugin crashes when attempting to launch fullscreen on a Facebook game

Categories

(Core Graveyard :: Plug-ins, defect, P1)

Unspecified
Windows
defect

Tracking

(firefox-esr52 unaffected, firefox-esr60 unaffected, firefox60 unaffected, firefox61 unaffected, firefox62+ verified)

VERIFIED FIXED
mozilla62
Tracking Status
firefox-esr52 --- unaffected
firefox-esr60 --- unaffected
firefox60 --- unaffected
firefox61 --- unaffected
firefox62 + verified

People

(Reporter: vlucaci, Assigned: cpeterson)

References

()

Details

(Keywords: crash, regression, reproducible)

Attachments

(2 files)

Attached image Flash Plugin crash.gif
[Affected versions]: - 62.0a1 (2018-06-06) - 61.0a1 (2018-04-03) [Affected platforms]: - Windows 10x64 - Windows 7x64 [Steps to reproduce]: 1. Launch FF. 2. Go to facebook.com and log in with valid credentials. 3. Search for Vegas Downtown Slots&Words. 4. Launch the game. 5. Go the the game's menu options 6. Select Fullscreen button. [Expected result]: - The game should be launched in full screen without any issues. [Actual result]: - The Flash Plugin will crash and the user must re-load the page, losing all progress if in action phase of the game. [Regression range]: - This seems to be a recent regression: https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=2404129f5672b9a91ea006c3f51cf171833a3124&tochange=f5f49315fec2505facfb775a417bdcf35504b5ef [Additional notes]: - This issue was encountered only on Vegas Downtown Slots&Words game. I have tried several other games(especially slot games and rich content games) and the issue was not encountered. - This issue only seems to be present on the Nightly builds.
My fix for bug 1461243 is in that regression range, but it landed it Nightly 62 and this bugs tracking flags say 61 is also affected. I'll try to reproduce the crash.
Blocks: 1461243
Keywords: crash
I can reproduce this problem in Nightly 62 on Windows, though my Facebook tab hangs instead of showing the "plugin has crashed" error message. https://apps.facebook.com/vegas_downtown_slots
I bisected this regression and confirmed what Vlad found: my code changes in bug 1461243 is the cause. :( https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=8a6dd4dc5513d5907d9411a465bdc2b42e903100&tochange=f5f49315fec2505facfb775a417bdcf35504b5ef I suspect patch #6 is the cause of the crash because it sets some NPNetscapeFuncs function pointers to null. Perhaps Flash is crashing on those null function pointers, even though those NPAPI functions should have only been relevant for Java plugins! https://hg.mozilla.org/integration/mozilla-inbound/rev/f5f49315fec2
Priority P1 because this is a reproducible crash regression!
Keywords: reproducible
Priority: -- → P1
The issue is reproducible on "v.baidu.com" too, as the videos require flash player to run, and when selecting fullscreen, firefox freezes for two seconds and then the flash player plugin crashes.
Attachment #8985569 - Flags: review?(jmathies) → review+
Comment on attachment 8985569 [details] Bug 1467452 - Back out f5f49315fec2 to restore getJavaEnv/getJavaPeer NPAPIs to fix Flash crash. https://reviewboard.mozilla.org/r/251182/#review258270 r=jimm
Attachment #8985569 - Flags: review+
Pushed by cpeterson@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/b8390bf6dda0 Back out f5f49315fec2 to restore getJavaEnv/getJavaPeer NPAPIs to fix Flash crash. r=jimm
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla62
Hello, This issue is verified fixed using FF Nightly 62.0a1 (2018-06-22), 63.0a1 (2018-07-11) and 62.0b7 on Windows 10 64bit and Windows 7x64.
Status: RESOLVED → VERIFIED
Flags: qe-verify+
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: