Bug 1467452 - Back out f5f49315fec2 to restore getJavaEnv/getJavaPeer NPAPIs to fix Flash crash. r=jimm

Flash still calls these NPAPIs to initialize some ancient LiveConnect code.